Week2/pod.yaml

apiVersion: v1
kind: Namespace
metadata:
  name: devops1
  labels:
    kubernetes.io/metadata.name: devops1
---
apiVersion: v1
kind: Pod
metadata:
  name: fail-pod-if-init-fails
spec:
  restartPolicy: Always
  containers:
  - name: main-container # This container will always be restarted once initialization succeeds.
    image: registry.k8s.io/busybox:1.27.2
    command: ['sh', '-c', 'sleep 1800 && exit 0']

---
apiVersion: v1
kind: Pod
metadata:
  name: app-with-logs
spec:
  volumes:
  - name: log-volume
    emptyDir: {}

  containers:
  - name: app
    image: busybox
    command:
      - sh
      - -c
      - |
        while true; do
          echo "Application running at $(date)" >> /logs/app.log
          sleep 5
        done

    volumeMounts:
    - name: log-volume
      mountPath: /logs

    startupProbe:
      exec:
        command: ["cat", "/logs/app.log"]
      failureThreshold: 30
      periodSeconds: 10

    livenessProbe:
      exec:
        command: ["cat", "/logs/app.log"]
      periodSeconds: 10

    readinessProbe:
      exec:
        command: ["cat", "/logs/app.log"]
      periodSeconds: 5
---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-deploy
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nginx
  template:
    metadata:
      labels:
        app: nginx
    spec:
      containers:
      - name: nginx
        image: nginx
        resources:
          requests:
            cpu: 100m
          limits:
            cpu: 200m
        ports:
        - containerPort: 80
