Week2/podname.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: podname-app
  namespace: demo
spec:
  replicas: 2
  selector:
    matchLabels:
      app: podname-app
  template:
    metadata:
      labels:
        app: podname-app
    spec:
      containers:
      - name: web
        image: nginx
        command: ["/bin/sh","-c"]
        args:
        - |
          echo "<h1>Served from Pod: $POD_NAME</h1>" > /usr/share/nginx/html/index.html
          nginx -g 'daemon off;'
        ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: podname-service
  namespace: demo
spec:
  selector:
    app: podname-app
  ports:
  - port: 80
    targetPort: 80        
---
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: demo-gateway
  namespace: demo
spec:
  gatewayClassName: cilium
  listeners:
  - name: http
    protocol: HTTP
    port: 80

---

apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: demo-route
  namespace: demo
spec:
  parentRefs:
  - name: demo-gateway
    sectionName: http
  hostnames:
  - "demo.local"

  rules:

  - matches:
    - path:
        type: PathPrefix
        value: /home
    filters:
    - type: URLRewrite
      urlRewrite:
        path:
          type: ReplacePrefixMatch
          replacePrefixMatch: /
    backendRefs:
    - name: nginx-frontend
      port: 80

  - matches:
    - path:
        type: PathPrefix
        value: /podname
    filters:
    - type: URLRewrite
      urlRewrite:
        path:
          type: ReplacePrefixMatch
          replacePrefixMatch: /
    backendRefs:
    - name: podname-service
      port: 80
